# l10n4x

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REPORT.md  deny.toml  l10n4x.config.json  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  conventional-commits.yml  coverage.yml  l10n4x-ci.yml  release-please.yml  release.yml  smokes.yml
docs/: ARCHITECTURE.md  ENTERPRISE_ADOPTION.md  LPK_FORMAT.md  PAK_FORMAT.md  ROADMAP.md  THREAT_MODEL.md  TMS.md  compile-time-embedding.md
docs/plans/: compiler-perf-optimizations.md
docs/superpowers/plans/: 2026-06-21-compile-time-embedding.md
docs/superpowers/specs/: 2026-06-21-compile-time-embedding-design.md
examples/csharp/: Example.csproj  L10n.cs  Program.cs
examples/csharp/test/: ExampleTests.csproj  L10nTests.cs
examples/flutter/: README.md  pubspec.yaml
examples/flutter/android/app/: build.gradle.kts
examples/flutter/android/app/src/main/: AndroidManifest.xml
examples/flutter/android/app/src/main/kotlin/com/l10n4x/l10n4x_example/: MainActivity.kt
examples/flutter/assets/locales/: en.lpk  en.pak  es.lpk  es.pak
examples/flutter/ios/Runner/: Info.plist
examples/flutter/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter/lib/: l10n4c.dart  main.dart
examples/flutter/linux/: CMakeLists.txt
examples/flutter/linux/runner/: my_application.cc
examples/flutter/macos/Runner.xcodeproj/: project.pbxproj
examples/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/flutter/macos/Runner/Configs/: AppInfo.xcconfig
examples/flutter/test/: l10n4c_smoke_test.dart
examples/flutter/web/: index.html  manifest.json
examples/flutter/windows/: CMakeLists.txt
examples/flutter/windows/runner/: Runner.rc  main.cpp
examples/go/: go.mod  l10n.go  main.go  smoke_test.go
examples/lib/: .gitignore  l10n4c.h
examples/python/: l10n.py  main.py  main_loader.py  test_smoke.py
examples/typescript/: README.md  client.ts  demo-browser.ts  demo-node.ts  i18n.ts  index.html  package.json  server.ts  tsconfig.json
i18n/go/: i18n.go  keys.go
i18n/ts/: generated.ts
scripts/: check_bench_regression.sh  verify.sh
src/: lib.rs
